--- a/src/main/resources/templates/NotFoundView.html
+++ b/src/main/resources/templates/NotFoundView.html
@@ -11,8 +11,8 @@
   <span class='error-num'>4</span>
   <div class='eye'></div>
   <span class='error-num'>4</span>
-  <p class='alert alert-dark' th:text="${error}">Page Not Found</p>
-  <a href='#' th:href="@{/}" class="btn btn-light text-dark">Go back</a>
+  <p class='alert alert-warning' th:text="${error}">Page Not Found</p>
+  <a href='#' th:href="@{/}" class="btn btn-warning text-dark">Go back</a>
 </div>
 
 <script th:replace="~{fragments/scripts :: error-page}"></script>
