--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -8,11 +8,11 @@
 
 <body class="error-page">
 <div>
-  <span class='error-num'>5</span>
+  <span class='error-num text-warning'>5</span>
   <div class='eye'></div>
   <div class='eye'></div>
-  <p class='error-sub-text'>Something went wrong. We're <i>looking</i> to see what happened.</p>
-  <a href='#' th:href="@{/}" class="btn btn-light text-dark">Go back</a>
+  <p class='alert alert-warning'>Something went wrong. We're <i>looking</i> to see what happened.</p>
+  <a href='#' th:href="@{/}" class="btn btn-warning text-dark">Go back</a>
 </div>
 
 <script th:replace="~{fragments/scripts :: error-page}"></script>
