implement searching for Photo Junkies. fix small bug with showPhotoJunkies method

--- a/src/main/resources/templates/PhotoJunkiesView.html
+++ b/src/main/resources/templates/PhotoJunkiesView.html
@@ -41,7 +41,8 @@
                     sizeQuery=${'&size='},
                     sortQuery=${'&sort='},
                     orderQuery=${'&order='},
-                    linkQuery=${sizeQuery + sizePage + sortQuery + sort + orderQuery + order}">
+                    keywordQuery=${'&q='},
+                    linkQuery=${sizeQuery + sizePage + sortQuery + sort + orderQuery + order + keywordQuery} + ${q == null ? '' : q}">
 
     <ul th:replace="~{fragments/pagination :: pagination}"></ul>
   </nav>
