--- a/src/main/resources/templates/ContestUpdateView.html
+++ b/src/main/resources/templates/ContestUpdateView.html
@@ -27,6 +27,7 @@
 
 </main>
 <div th:replace="~{fragments/footer :: footer}"></div>
+<script th:replace="~{fragments/scripts :: select-cover-photo}"></script>
 <script th:replace="~{fragments/scripts :: loading-spinner}"></script>
 <script th:replace="~{fragments/scripts :: bootstrap}"></script>
 </body>
