--- a/src/main/resources/templates/ContestView.html
+++ b/src/main/resources/templates/ContestView.html
@@ -19,8 +19,8 @@
            th:style="${(contest.coverPhoto != null && contest.coverPhoto.startsWith('http')) ? 'background-image: url(' + contest.coverPhoto + ')' : ''}">
     <div class="row py-5">
       <div class="col col-xl-8 mx-auto position-relative">
-        <div class="position-absolute top-0 start-50 translate-middle" th:if="${session.user.organizer}">
-          <div class="btn-group" role="group">
+        <div class="position-absolute top-0 start-50 translate-middle">
+          <div class="btn-group" role="group" th:if="${session.user.organizer}">
             <a href="#" class="btn btn-sm btn-warning" th:if="${phase1}" th:href="@{${requestURI} + '/update'}"><i class="bi bi-pencil-square"></i></a>
             <button class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#deleteContest" th:if="${phase1}"><i class="bi bi-x-square"></i></button>
           </div>
@@ -59,16 +59,16 @@
         </div>
 
         <div class="btn-group mt-3" role="group">
-          <button type="button" class="btn btn-lg btn-warning" data-bs-toggle="modal" data-bs-target="#photoWinners" th:if="${contest.isFinished}">Winners</button>
-          <a type="button" class="btn btn-lg btn-warning" th:if="${phase1 && !contest.invitational && !session.user.organizer && !contest.isFinished && !contest.participants.contains(session.user.username)}" th:href="@{${requestURI} + '/join'}">Participate</a>
-          <a type="button" class="btn btn-lg btn-warning disabled" th:if="${phase1 && contest.invitational && !contest.isFinished && !session.user.organizer && !contest.participants.contains(session.user.username)}">Invitational</a>
-          <button type="button" class="btn btn-lg btn-warning disabled" th:if="${phase1 && !contest.isFinished && session.user.organizer}">Invite</button>
-          <a type="button" class="btn btn-lg btn-outline-warning" th:if="${phase1 && !contest.isFinished && session.user.organizer}" th:href="@{${requestURI} + '/add-participant'}">User</a>
-          <a type="button" class="btn btn-lg btn-outline-warning" th:if="${phase1 && !contest.isFinished && session.user.organizer}" th:href="@{${requestURI} + '/add-jury'}">Jury</a>
-          <a type="button" class="btn btn-lg btn-warning" th:if="${phase1 && !contest.isFinished && contest.participants.contains(session.user.username)}" th:href="@{${requestURI} + '/photos/new'}">Upload</a>
-          <button type="button" class="btn btn-lg btn-dark disabled text-warning" th:if="${phase1 && !phase2}" th:text="${phase1Ends}">Closed in (design)</button>
-          <button type="button" class="btn btn-lg btn-warning disabled" th:if="${phase2}">Scoring</button>
-          <button type="button" class="btn btn-lg btn-dark disabled text-warning" th:if="${phase2}" th:text="${phase2Ends}">Until (design)</button>
+          <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#photoWinners" th:if="${contest.isFinished}">Winners</button>
+          <a type="button" class="btn btn-warning" th:if="${phase1 && !contest.invitational && !session.user.organizer && !contest.isFinished && !contest.participants.contains(session.user.username)}" th:href="@{${requestURI} + '/join'}">Participate</a>
+          <a type="button" class="btn btn-warning disabled" th:if="${phase1 && contest.invitational && !contest.isFinished && !session.user.organizer && !contest.participants.contains(session.user.username)}">Invitational</a>
+          <button type="button" class="btn btn-warning disabled" th:if="${phase1 && !contest.isFinished && session.user.organizer}">Invite</button>
+          <a type="button" class="btn btn-outline-warning" th:if="${phase1 && !contest.isFinished && session.user.organizer}" th:href="@{${requestURI} + '/add-participant'}">User</a>
+          <a type="button" class="btn btn-outline-warning" th:if="${phase1 && !contest.isFinished && session.user.organizer}" th:href="@{${requestURI} + '/add-jury'}">Jury</a>
+          <a type="button" class="btn btn-warning" th:if="${phase1 && !contest.isFinished && contest.participants.contains(session.user.username)}" th:href="@{${requestURI} + '/photos/new'}">Upload</a>
+          <button type="button" class="btn btn-dark disabled neon-text" th:if="${phase1 && !phase2}" th:text="${phase1Ends}">Closed in (design)</button>
+          <button type="button" class="btn btn-warning disabled" th:if="${phase2}">Scoring</button>
+          <button type="button" class="btn btn-dark disabled neon-text" th:if="${phase2}" th:text="${phase2Ends}">Until (design)</button>
         </div>
 
       </div>
@@ -104,7 +104,6 @@
                     <div class="modal-content bg-dark">
                       <div class="modal-header bg-dark">
                         <h1 class="modal-title fs-5 text-warning">Delete Photo</h1>
-<!--                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
                       </div>
                       <div class="modal-footer bg-dark">
                         <div class="btn-group">
@@ -168,15 +167,15 @@
     <div class="modal-content bg-dark">
       <div class="modal-header bg-dark">
         <h1 class="modal-title fs-5 text-warning">Enlisted Users</h1>
-<!--        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
       </div>
       <div class="modal-footer bg-dark">
-        <div class="btn-group mb-2" style="display: block">
+        <div class="btn-group mb-2 w-100">
           <button type="button" class="btn btn-sm btn-warning mb-1">Juries</button>
           <button type="button" class="btn btn-sm btn-outline-warning disable mb-1" th:each="jury : ${contest.juries}" th:text="${jury}">Juries (design)</button>
         </div>
-        <div class="btn-group" style="display: block">
+        <div class="btn-group w-100">
           <button type="button" class="btn btn-sm btn-warning mb-1">Participants</button>
+          <button type="button" class="btn btn-sm btn-outline-warning disable mb-1" th:if="${contest.participants.isEmpty()}">None</button>
           <button type="button" class="btn btn-sm btn-outline-warning disable mb-1" th:each="participant : ${contest.participants}" th:text="${participant}">Participants (design)</button>
         </div>
       </div>
@@ -190,7 +189,6 @@
     <div class="modal-content bg-dark">
       <div class="modal-header bg-dark">
         <h1 class="modal-title fs-5 text-warning">Delete Contest</h1>
-<!--        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
       </div>
       <div class="modal-footer bg-dark">
         <div class="btn-group">
