--- a/src/main/resources/templates/fragments/contest-form.html
+++ b/src/main/resources/templates/fragments/contest-form.html
@@ -16,13 +16,33 @@
     <div id="validationCategory" class="invalid-feedback" th:errors="*{title}">Error placeholder</div>
   </div>
   <div class="form-floating mb-3 row">
-    <div class="col-md-6 mb-3 mb-md-0">
+    <div class="col-md-5 mb-3 mb-md-0" th:class="${ctxCreate ? 'col-md-6 mb-3 mb-md-0' : 'col-md-5 mb-3 mb-md-0'}">
         <input type="text" class="form-control" id="inputPhotoURL" placeholder="Photo URL" th:field="*{coverPhoto}">
     </div>
-    <div class="col-md-6">
+    <div class="col-md-5" th:class="${ctxCreate ? 'col-md-6' : 'col-md-5'}">
       <input type="file" class="form-control" id="inputPhotoUpload" name="file" th:field="*{coverPhotoUpload}" accept=".jpeg, .jpg, .png">
     </div>
+    <div class="col-md-2 mt-3 mt-md-0" th:if="${ctxUpdate}">
+      <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#selectPhotoModal">Photos</button>
+
+      <!-- Modal -->
+      <div class="modal fade" id="selectPhotoModal" tabindex="-1" aria-labelledby="selectPhotoModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="selectPhotoModalLabel">Select Cover Photo</h1>
+            </div>
+            <div class="modal-footer">
+              <span th:if="${#lists.isEmpty(contest.contestPhotos)}">No photos in this contest yet...</span>
+              <img src="#" alt="#" width="200" th:each="photo : ${contest.contestPhotos}" class="img-thumbnail m-1" data-bs-dismiss="modal" th:src="${photo}" onclick="selectPhoto(this)">
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </div>
+
   <div class="input-group mb-3" th:if="${ctxCreate}">
     <span class="input-group-text d-none d-lg-block">Phase 1</span>
     <div class="form-floating">
