--- a/src/main/resources/templates/ContestView.html
+++ b/src/main/resources/templates/ContestView.html
@@ -237,7 +237,7 @@
       <div class="modal-footer">
         <div class="d-flex gap-2 w-100 justify-content-between py-1">
           <div class="btn-group">
-            <button class="btn btn-warning text-truncate" type="button">Story</button>
+            <button class="btn btn-warning text-truncate" type="button" style="width: 100px">Story</button>
             <button class="btn btn-outline-warning photo-story" type="button"></button>
           </div>
           <div>
