--- a/src/main/resources/templates/PhotosView.html
+++ b/src/main/resources/templates/PhotosView.html
@@ -13,7 +13,7 @@
   <div class="container px-5 py-3">
     <form th:replace="~{fragments/photos-search :: photos-search}"></form>
   </div>
-  <div class="container">
+  <div class="container py-5">
     <div class="row row-cols-1 row-cols-sm-2 g-3">
       <th:block th:each="photo : ${photos}">
         <div class="col  rounded-4">
