--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -7,7 +7,7 @@ body {
 .carousel-item img {
     border-radius: 10px;
     padding: 10px;
-    background-color: #ffc107;
+    background-color: #212529;
 }
 
 /*NAVBAR*/
@@ -91,7 +91,9 @@ body {
 #participantsModal .modal-header,
 #participantsModal .modal-footer,
 .deletePhotoModal .modal-header,
-.deletePhotoModal .modal-footer {
+.deletePhotoModal .modal-footer,
+.contest-update-view .modal-header,
+.contest-update-view .modal-footer {
     border-top: none !important;
     border-bottom: none !important;
 }
@@ -126,6 +128,11 @@ body {
 
 .contest-create-view .form-floating > #floatingJurySelect {
     height: 6rem !important;
+}
+
+.contest-update-view .img-thumbnail {
+    background-color: #ffc107 !important;
+    border: none !important;
 }
 
 /*PAGINATION*/
