--- a/src/main/resources/templates/MyPhotosView.html
+++ b/src/main/resources/templates/MyPhotosView.html
@@ -2,13 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <title th:text="#{page.title.photos}">Photo Contest</title>
+  <title th:text="#{page.title.myphotos}">Photo Contest</title>
   <th:block th:replace="~{fragments/head :: head}"></th:block>
 </head>
 
 <body class="login-view d-flex flex-column min-vh-100">
-<header th:replace="~{fragments/navbar :: header(context='all-photos')}"></header>
-<h3 class="pb-2 text-center display-2" th:text="${!photos.isEmpty() ? 'Photos' : 'No Photos'}">Photos (design)</h3>
+<header th:replace="~{fragments/navbar :: header(context='my-photos')}"></header>
+<h3 class="pb-2 text-center display-2" th:text="${!photos.isEmpty() ? 'My Photos' : 'No Photos'}">Photos (design)</h3>
 <div th:replace="~{fragments/photos-view :: photos-view}"></div>
 <div th:replace="~{fragments/footer :: footer}"></div>
 <script th:replace="~{fragments/scripts :: bootstrap}"></script>
