--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,12 +10,12 @@
     <header th:replace="~{fragments/navbar :: header(context='home')}"></header>
     <main class="container mx-auto my-5">
         <div class="px-2 mb-5 rounded">
-            <div class="col px-3">
-                <h1 class="display-4 fst-italic text-dark">Welcome to <span class="text-bg-dark px-3 rounded text-warning fst-normal text-nowrap">Photo Junkies Yard</span></h1>
+            <div class="col-8 mx-auto">
+                <h1 class="display-4 fst-italic text-dark text-center">Welcome to <span class="text-bg-dark px-3 rounded text-warning fst-normal text-nowrap">Photo Junkies Yard</span></h1>
                 <p class="lead mt-3 text-dark">
                     To participate in our contest, you can submit your best photos.
                     Make sure to upload high-quality photos and include a brief description of each photo.
-                    Winners will be selected based on creativity, originality, and adherence to the contest theme.
+                    Winners will be selected based on creativity, originality.
                     Check out our latest winners down below <i class="bi bi-arrow-down"></i>
                 </p>
             </div>
