--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -329,3 +329,23 @@ body {
 .ql-toolbar {
     border-top-left-radius: .375rem;
 }
+
+/*SCROLL BAR*/
+*::-webkit-scrollbar {
+    width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+    background-color: #212529;
+    border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #ffc107;
+    border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: #212529;
+    border: 1px #ffc107 solid;
+}
